<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblNamePlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lblScorePlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scorePlayer1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/lblNamePlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lblScorePlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scorePlayer2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue2" />

    <Button
        android:id="@+id/btnQuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit" />

</LinearLayout>