<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/playerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/playerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scorePlayer1" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/btnDie1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/die1" />

        <ImageButton
            android:id="@+id/btnDie2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/die2" />

        <ImageButton
            android:id="@+id/btnDie3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/die3" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/btnDie4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/die4" />

        <ImageButton
            android:id="@+id/btnDie5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/die5" />

        <ImageButton
            android:id="@+id/btnDie6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/die6" />

    </TableRow>

    <TextView
        android:id="@+id/selectedScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectedPoints"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnRoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keepRolling" />

    <Button
        android:id="@+id/btnEndRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endRound" />

    <TextView
        android:id="@+id/bankScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pointsInBank"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</TableLayout>